@startuml BeCoMe-Class-Diagram

' Style configuration
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classFontStyle bold
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam nodesep 40
skinparam ranksep 30

' Layout
top to bottom direction

' ==================== CORE CLASSES ====================

class FuzzyTriangleNumber <<immutable>> {
    - _lower_bound: float
    - _peak: float
    - _upper_bound: float
    __
    + centroid: float <<property>>
    + {static} average(fuzzy_numbers): FuzzyTriangleNumber
}

class ExpertOpinion <<immutable>> {
    - _expert_id: str
    - _opinion: FuzzyTriangleNumber
    __
    + centroid: float <<property>>
}

class BeCoMeCalculator {
    + calculate_arithmetic_mean(opinions): FuzzyTriangleNumber
    + calculate_median(opinions): FuzzyTriangleNumber
    + calculate_compromise(opinions): BeCoMeResult
}

class BeCoMeResult <<pydantic>> {
    + best_compromise: FuzzyTriangleNumber
    + arithmetic_mean: FuzzyTriangleNumber
    + median: FuzzyTriangleNumber
    + max_error: float
    + num_experts: int
    __
    + {static} from_calculations(mean, median, n): BeCoMeResult
}

' ==================== RELATIONSHIPS ====================

ExpertOpinion *--> FuzzyTriangleNumber : contains
BeCoMeResult *--> "3" FuzzyTriangleNumber : contains
BeCoMeCalculator ..> ExpertOpinion : <<uses>>
BeCoMeCalculator ..> BeCoMeResult : <<creates>>

@enduml
